--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Amazon</title>
 </head>
 
-<body class="bg-[#f1f3f4]">
+<body class="">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
